--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 @import url("https://cdn.jsdelivr.net/npm/galmuri@latest/dist/galmuri.css");
 #root {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
