Layout - 고정 높이 수치의 변경에 따른 대대적 개편

--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 95vh;
+}
+
+#app-main-screen,
+html {
+  scrollbar-width: none;
+}
+
+#app-main-screen::-webkit-scrollbar,
+::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
 }
