Layout - Footer 미리 만들어버림
어정쩡하게 멍때리고 있느니

--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   height: 95vh;
+}
+
+#root > :first-child {
+  flex-shrink: 0;
 }
 
 #app-main-screen,
