Feat - Section이 스크롤을 훔치게 하기 (Sticky 활용)

--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,14 @@
 }
 
 #app-main-screen,
-html {
+html,
+section {
   scrollbar-width: none;
 }
 
 #app-main-screen::-webkit-scrollbar,
-::-webkit-scrollbar {
+::-webkit-scrollbar,
+section::-webkit-scrollbar {
   width: 0;
   background: transparent;
 }
