Feat - 좌우로 무한 스크롤 되는 배경 요소 구현

--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,22 @@ particle {
   background-repeat: no-repeat;
   background-size: contain;
 }
+
+/** Custom animation for banner text in Section 03: Skills**/
+@keyframes bannermove-main {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes bannermove-sub {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(100%);
+  }
+}
