--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,8 @@ particle {
   height: 100% !important;
 }
 
-.rsis-image {
+.rsis-image,
+.rsis-image + div {
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain !important;
