Layout - 권장 화면 해상도보다 작은 화면에서도 페이지를 확인할 수는 있도록 조정
새로 반응형 레이아웃을 적용한 수준까진 아니지만 스크롤 정도는 가능하도록 레이아웃을 조정함

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 @import url("https://cdn.jsdelivr.net/npm/galmuri@latest/dist/galmuri.css");
+
+html {
+  overflow: scroll;
+}
+
 #root {
   display: flex;
   flex-direction: column;
-  align-items: center;
   height: 95vh;
 }
 
