Fix - Safari 브라우저에서 스크롤바가 완벽히 숨겨지지 않는 문제 수정

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ section,
 section::-webkit-scrollbar,
 #skills-items-list::-webkit-scrollbar {
   width: 0;
+  height: 0;
   background: transparent;
 }
 
